--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@openzeppelin/contracts": "^5.0.2"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "dotenv": "^16.4.5",
+    "ethers": "^5.7.2",
     "hardhat": "^2.22.13"
   }
 }
